crates/config/tests/snapshots/whitespace_only_line.snap
---
source: crates/config/tests/snapshots.rs
---
# whitespace-only-line

## Input

```mical
key value
  
foo bar

```

## JSON

```json
{
  "key": "value",
  "foo": "bar"
}
```

vim:ft=markdown
