crates/config/tests/snapshots/whitespace_only_line_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# whitespace-only-line-at-eof

## Input

```mical
key value
   
```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
