crates/config/tests/snapshots/whitespace_only_line_at_start.snap
---
source: crates/config/tests/snapshots.rs
---
# whitespace-only-line-at-start

## Input

```mical
   
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
